syntax = "proto3";
package stegos.loader;

import "crypto.proto";
import "blockchain.proto";

message Subscribe {
    uint64 epoch = 1;
    uint32 offset = 2;
}

message ReplicationRequest {
    oneof request {
        Subscribe subscribe = 1;
    }
}

message Subscribed {
    uint64 current_epoch = 1;
    uint32 current_offset = 2;
}

message Block {
    uint64 current_epoch = 1;
    uint32 current_offset = 2;
    stegos.blockchain.Block block = 10;
}

message ReplicationResponse {
    oneof response {
        Subscribed subscribed = 1;
        Block block = 2;
    }
}